ajustes para mejorar diseño responsive

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,40 +1,51 @@
-@media (max-width: 576px) { // Ajustes específicos para celulares pequeños
-    p {
-        width: 100%;  // Ocupará todo el ancho del contenedor
-        max-width: 100%; // Asegura que no tenga límite de ancho
-        margin: 0 auto;
-        font-size: 16px;
-        text-align: justify;
-        line-height: 1.6;
-        padding: 0 5%;
-    }
-
-    .img-grupo {
-        flex-direction: column; 
-        align-items: center; 
-        gap: 10px;
-    }
-
+@media (max-width: 1024px) { // Tablets grandes 
     .img-grupo img {
-        max-width: 100%; 
+        max-width: 220px;  
+    }
+}
+
+@media (max-width: 768px) { // Para tablets y móviles 
+    footer {
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .nav-link.active {
+        font-size: 14px;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-link {
+        padding: 10px;
+        text-align: center;
         display: block;
-        height: auto;
-        margin: 0 auto;
+        width: 100%;
+        font-size: 12px;
     }
 
     .logo {
-        width: 100px;
+        width: 120px;
+    }
+
+    .img-grupo img {
+        max-width: 180px; 
     }
 
     .video-container {
-        width: 100%;
         max-width: 100%;
-        margin: auto;
-    }
-
-    .container {
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
+        aspect-ratio: 16 / 9;
     }
 }
+
+@media (max-width: 576px) { // Ajustes específicos para celulares pequeños
+    p {
+        width: 90%; /* Para que el párrafo no sea demasiado angosto */
+        max-width: 100%;
+        margin: 0 auto;
+        font-size: 16
+
