otro arreglo de media

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -37,55 +37,4 @@
     }
 
     .video-container {
-        max-width: 100%;
-        aspect-ratio: 16 / 9;
-    }
-}
-
-@media (max-width: 576px) { // Ajustes específicos para celulares pequeños
-    body {
-        width: 100%;
-    }
-
-    .container {
-        width: 100% !important; 
-        max-width: 95% !important; 
-        margin: 0 auto !important;
-        padding: 0 2rem !important; /* Agrega espacio en los lados */
-    }
-
-    p {
-        width: 100% !important; 
-        max-width: 100% !important;
-        margin: 0 auto;
-        font-size: 18px; 
-        text-align: left; 
-        line-height: 1.8; 
-        padding: 0 2rem; 
-        word-spacing: normal; 
-        letter-spacing: normal;
-    }
-
-    .img-grupo {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .img-grupo img {
-        max-width: 100%;
-        display: block;
-        height: auto;
-        margin: 0 auto;
-    }
-
-    .logo {
-        width: 120px;
-    }
-
-    .video-container {
-        width: 100%;
-        max-width: 100%;
-        margin: auto;
-    }
-}
+        max
