--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,10 +1,11 @@
-@media (max-width: 1024px) { // Tablets grandes 
+/* Media Queries */
+@media (max-width: 1024px) {
     .img-grupo img {
-        max-width: 220px;  
+        max-width: 220px;
     }
 }
 
-@media (max-width: 768px) { // Para tablets y móviles 
+@media (max-width: 768px) {
     footer {
         font-size: 14px;
         padding: 10px;
@@ -33,7 +34,7 @@
     }
 
     .img-grupo img {
-        max-width: 180px; 
+        max-width: 180px;
     }
 
     .video-container {
@@ -42,31 +43,35 @@
     }
 }
 
-@media (max-width: 576px) { // Ajustes específicos para celulares pequeños
+@media (max-width: 576px) {
     body {
         width: 100% !important;
     }
+    
+    main {
+        padding: 4% !important;
+    }
 
     .container {
-        width: 100% !important; 
-        max-width: 95% !important; 
+        width: 100% !important;
+        max-width: 100% !important;
         margin: 0 auto !important;
-        padding: 0 2% !important; /* Espacio reducido en los lados */
+        padding: 0 3% !important;
     }
 
     p {
         display: block !important;
-        width: 95% !important; /* Párrafos más anchos */
+        width: 95% !important;
         max-width: 100% !important;
         margin: 0 auto !important;
-        font-size: 18px !important; 
-        text-align: justify !important; /* Justificación sin separación extraña */
-        line-height: 1.8 !important; /* Espaciado entre líneas */
-        padding: 0 2% !important; /* Menos padding en los lados */
-        word-spacing: 0px !important; /* Evita espacios exagerados entre palabras */
+        font-size: 18px !important;
+        text-align: justify !important;
+        line-height: 1.8 !important;
+        padding: 0 2% !important;
+        word-spacing: 0px !important;
         letter-spacing: 0px !important;
-        white-space: normal !important; /* Corrige la distribución del texto */
-        hyphens: none !important; /* Evita cortes raros de palabras */
+        white-space: normal !important;
+        hyphens: auto !important;
     }
 
     .img-grupo {
