--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,10 +1,13 @@
 /* Media Queries */
+
+/*  Ajustes para Tablets grandes */
 @media (max-width: 1024px) {
     .img-grupo img {
         max-width: 220px;
     }
 }
 
+/* Ajustes para Tablets y Móviles */
 @media (max-width: 768px) {
     footer {
         font-size: 14px;
@@ -43,6 +46,7 @@
     }
 }
 
+/* Ajustes específicos para Celulares pequeños */
 @media (max-width: 576px) {
     body {
         width: 100% !important;
@@ -96,5 +100,13 @@
         max-width: 100% !important;
         margin: auto;
     }
-}
 
+    /* Corrige el tamaño del Mapa en celulares*/
+    .mapa-container iframe {
+        width: 100% !important; /* Ocupa el ancho completo */
+        max-width: 100% !important;
+        height: 250px !important; /* Ajusta la altura para celulares */
+        display: block;
+        margin: 0 auto;
+    }
+}
